--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 <script src="{cdn}/is/0.9.0/is.min.js"></script>
 <script src="{cdn}/moment/2.22.2/moment.min.js"></script>
 <script src="{cdn}/moment/2.22.2/moment-timezone.min.js"></script>
+<script src="{cdn}/ace/1.4.6/ace.js"></script>
+<script src="{cdn}/ace/1.4.6/mode-json.js"></script>
+<script src="{cdn}/ace/1.4.6/theme-monokai.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key={googleKey}&libraries=places" async defer></script>
 <script src="{cdn}/admin/{version}/index.js"></script>
 </body>
