--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{cdn}/bootstrap-select/1.13.2/bootstrap-select.min.css">
     <link rel="stylesheet" href="{cdn}/fontawesome/5.4.1/css/fontawesome-all.min.css">
     <link rel="stylesheet" href="{cdn}/summernote/0.8.12/summernote-bs4.css">
+    <link rel="stylesheet" href="{cdn}/summernote/0.8.12/summernote-list-styles-bs4.css">
     <link rel="stylesheet" href="{cdn}/admin/{version}/index.css">
 </head>
 <body>
@@ -22,6 +23,7 @@
 <script src="{cdn}/bootstrap/4.3.1/bootstrap.min.js"></script>
 <script src="{cdn}/bootstrap-select/1.13.2/bootstrap-select.min.js"></script>
 <script src="{cdn}/summernote/0.8.12/summernote-bs4.min.js"></script>
+<script src="{cdn}/summernote/0.8.12/summernote-list-styles-bs4.js"></script>
 <script src="{cdn}/lodash/4.17.4/lodash.min.js"></script>
 <script src="{cdn}/async/2.6.0/async.min.js"></script>
 <script src="{cdn}/is/0.9.0/is.min.js"></script>
