--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Oxygen:300,400,500,600,700" rel="stylesheet">
     <link rel="stylesheet" href="{cdn}/bootstrap/4.3.1/bootstrap.min.css">
     <link rel="stylesheet" href="{cdn}/bootstrap-select/1.13.2/bootstrap-select.min.css">
-    <link rel="stylesheet" href="{cdn}/fontawesome/5.4.1/css/fontawesome-all.min.css">
+    <link rel="stylesheet" href="{cdn}/fontawesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="{cdn}/summernote/0.8.12/summernote-bs4.css">
     <link rel="stylesheet" href="{cdn}/summernote/0.8.12/summernote-list-styles-bs4.css">
     <link rel="stylesheet" href="{cdn}/admin/{version}/index.css">
