--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <script src="{cdn}/ace/1.4.6/ace.js"></script>
 <script src="{cdn}/ace/1.4.6/mode-json.js"></script>
 <script src="{cdn}/ace/1.4.6/theme-monokai.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key={googleKey}&libraries=places" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key={googleKey}&libraries=places"></script>
 <script src="{cdn}/admin/{version}/index.js"></script>
 </body>
 </html>
