--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <script src="{cdn}/is/0.9.0/is.min.js"></script>
 <script src="{cdn}/moment/2.22.2/moment.min.js"></script>
 <script src="{cdn}/moment/2.22.2/moment-timezone.min.js"></script>
+<script src="{cdn}/numeral/2.0.6/numeral.min.js"></script>
 <script src="{cdn}/ace/1.4.6/ace.js"></script>
 <script src="{cdn}/ace/1.4.6/mode-json.js"></script>
 <script src="{cdn}/ace/1.4.6/theme-monokai.js"></script>
