--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{cdn}/fontawesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="{cdn}/summernote/0.8.12/summernote-bs4.css">
     <link rel="stylesheet" href="{cdn}/summernote/0.8.12/summernote-list-styles-bs4.css">
+    <link rel="stylesheet" href="{cdn}/fileupload/10.9.0/jquery.fileupload.css">
     <link rel="stylesheet" href="{cdn}/admin/{version}/index.css">
 </head>
 <body>
@@ -30,6 +31,11 @@
 <script src="{cdn}/moment/2.22.2/moment.min.js"></script>
 <script src="{cdn}/moment/2.22.2/moment-timezone.min.js"></script>
 <script src="{cdn}/numeral/2.0.6/numeral.min.js"></script>
+<script src="{cdn}/fileupload/10.9.0/jquery.ui.widget.js"></script>
+<script src="{cdn}/fileupload/10.9.0/jquery.iframe-transport.js"></script>
+<script src="{cdn}/fileupload/10.9.0/jquery.fileupload.js"></script>
+<script src="{cdn}/fileupload/10.9.0/jquery.fileupload-process.js"></script>
+<script src="{cdn}/fileupload/10.9.0/jquery.fileupload-validate.js"></script>
 <script src="{cdn}/ace/1.4.6/ace.js"></script>
 <script src="{cdn}/ace/1.4.6/mode-json.js"></script>
 <script src="{cdn}/ace/1.4.6/theme-monokai.js"></script>
