--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="shortcut icon" href="{cdn}/logo/master/favicon.ico">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords" content="admin">
+    <meta name="description" content="Admin portal of serandives.com">
     <link href="https://fonts.googleapis.com/css?family=Oxygen:300,400,500,600,700" rel="stylesheet">
     <link rel="stylesheet" href="{cdn}/bootstrap/4.3.1/bootstrap.min.css">
     <link rel="stylesheet" href="{cdn}/bootstrap-select/1.13.2/bootstrap-select.min.css">
