--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Oxygen:300,400,500,600,700" rel="stylesheet">
     <link rel="stylesheet" href="{cdn}/bootstrap/4.3.1/bootstrap.min.css">
     <link rel="stylesheet" href="{cdn}/bootstrap-select/1.13.2/bootstrap-select.min.css">
+    <link rel="stylesheet" href="{cdn}/jquery-ui/1.12.1/jquery-ui.min.css">
     <link rel="stylesheet" href="{cdn}/fontawesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="{cdn}/summernote/0.8.12/summernote-bs4.css">
     <link rel="stylesheet" href="{cdn}/summernote/0.8.12/summernote-list-styles-bs4.css">
@@ -22,6 +23,7 @@
     var sera = {.|js|s};
 </script>
 <script src="{cdn}/jquery/3.3.1/jquery.min.js"></script>
+<script src="{cdn}/jquery-ui/1.12.1/jquery-ui.min.js"></script>
 <script src="{cdn}/popper/1.14.4/popper.min.js"></script>
 <script src="{cdn}/bootstrap/4.3.1/bootstrap.min.js"></script>
 <script src="{cdn}/bootstrap-select/1.13.2/bootstrap-select.min.js"></script>
