--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 </script>
 <script src="{cdn}/jquery/3.3.1/jquery.min.js"></script>
 <script src="{cdn}/jquery-ui/1.12.1/jquery-ui.min.js"></script>
+<script src="{cdn}/jquery-ui/1.12.1/jquery.ui.touch-punch.min.js"></script>
 <script src="{cdn}/popper/1.14.4/popper.min.js"></script>
 <script src="{cdn}/bootstrap/4.3.1/bootstrap.min.js"></script>
 <script src="{cdn}/bootstrap-select/1.13.2/bootstrap-select.min.js"></script>
