--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
 <script src="{cdn}/moment/2.22.2/moment.min.js"></script>
 <script src="{cdn}/moment/2.22.2/moment-timezone.min.js"></script>
 <script src="{cdn}/numeral/2.0.6/numeral.min.js"></script>
-<script src="{cdn}/fileupload/10.9.0/jquery.ui.widget.js"></script>
+<script src="{cdn}/fileupload/10.9.0/load-image.all.min.js"></script>
+<script src="{cdn}/fileupload/10.9.0/canvas-to-blob.min.js"></script>
 <script src="{cdn}/fileupload/10.9.0/jquery.iframe-transport.js"></script>
 <script src="{cdn}/fileupload/10.9.0/jquery.fileupload.js"></script>
 <script src="{cdn}/fileupload/10.9.0/jquery.fileupload-process.js"></script>
+<script src="{cdn}/fileupload/10.9.0/jquery.fileupload-image.js"></script>
 <script src="{cdn}/fileupload/10.9.0/jquery.fileupload-validate.js"></script>
 <script src="{cdn}/ace/1.4.6/ace.js"></script>
 <script src="{cdn}/ace/1.4.6/mode-json.js"></script>
