--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <script>
     var sera = {.|js|s};
 </script>
+<script src="{cdn}/js-cookie/3.0.0/js-cookie.min.js"></script>
 <script src="{cdn}/jquery/3.3.1/jquery.min.js"></script>
 <script src="{cdn}/jquery-ui/1.12.1/jquery-ui.min.js"></script>
 <script src="{cdn}/jquery-ui/1.12.1/jquery.ui.touch-punch.min.js"></script>
