--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <script src="{cdn}/moment/2.22.2/moment.min.js"></script>
 <script src="{cdn}/moment/2.22.2/moment-timezone.min.js"></script>
 <script src="{cdn}/numeral/2.0.6/numeral.min.js"></script>
+<script src="{cdn}/html-sanitizer/1.0.0/html-sanitizer.js"></script>
 <script src="{cdn}/fileupload/10.9.0/load-image.all.min.js"></script>
 <script src="{cdn}/fileupload/10.9.0/canvas-to-blob.min.js"></script>
 <script src="{cdn}/fileupload/10.9.0/jquery.iframe-transport.js"></script>
